--- a/AnimationDemo/Info.plist
+++ b/AnimationDemo/Info.plist
@@ -32,6 +32,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>asdf</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>asdf</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
