--- a/AnimationDemo/Info.plist
+++ b/AnimationDemo/Info.plist
@@ -43,5 +43,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Oswald-Medium.ttf</string>
+		<string>Oswald-Regular.ttf</string>
+		<string>SourceHanSansCN-Heavy.otf</string>
+	</array>
 </dict>
 </plist>
